--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ p{
 h1{
     background: #f00;
 }
+.mychange{
+    background: #ff0; 
+    text-align: center;
+    text-transform: uppercase;
+    padding: 50px;
+}
